# cudnn-frontend-meson-python

./: .gitignore  CLAUDE.md  eugo_pip3_install.sh  meson.build  pyproject.toml
.claude/skills/eugo-build-and-test/: SKILL.md
.claude/skills/eugo-meson-build-review/: SKILL.md
.claude/skills/eugo-rebuild/: SKILL.md
.claude/skills/eugo-upstream-merge/: SKILL.md
.eugo/: eugo_meson_setup.sh  eugo_meson_sync_headers.py  eugo_pip3_wheel.sh
cmake/: FindcuDNN.cmake
include/: cudnn_frontend_utils.h
